# mkm-solver

./: .gitignore  README.md  pyproject.toml
examples/: cn_coupling.json  lateral_interactions.json
mkm_solver/: __init__.py  __main__.py  build_mkm.py  kinetics.py  logger.py  output.py  plotting.py  schema.py  sensitivity.py  solver.py  validation.py
mkm_solver/utils/: constants.py
